Readme file and updated config logic

--- a/RelayPIApp/Components/App.razor
+++ b/RelayPIApp/Components/App.razor
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="@Assets["RelayPIApp.styles.css"]" />
     <ImportMap />
     <HeadOutlet @rendermode="InteractiveServer" />
-    <RadzenTheme Theme="material" />
+    <RadzenTheme Theme="standard" />
+    <style>
+        html, body {
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
