--- a/RelayPIApp/Components/Layout/MainLayout.razor
+++ b/RelayPIApp/Components/Layout/MainLayout.razor
@@ -1,6 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<div style="width: 100%; max-width: 1024px; margin: 0 auto;">
+    @Body
+</div>
 
 <div id="blazor-error-ui" data-nosnippet>
     An unhandled error has occurred.
